# hsr-booking

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: booking.py  captcha.py  config.py  gui.py  main.py
test/: conftest.py  test_booking.py  test_captcha.py  test_config.py  test_main.py
